SERVER-33123 Mongos noscripting command line and configuration

Hid --noscripting, added and hid security.javascriptEnabled, warned on
set for mongos.